--- a/packages/firebase_ml_model_downloader/firebase_ml_model_downloader/example/macos/Runner/GoogleService-Info.plist
+++ b/packages/firebase_ml_model_downloader/firebase_ml_model_downloader/example/macos/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>406099696497-irb7edfevfkhi6t5s9kbuq1mt1og95rg.apps.googleusercontent.com</string>
+	<string>406099696497-mcs94a53ttg7ru556uec2hejel40ej7u.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.406099696497-irb7edfevfkhi6t5s9kbuq1mt1og95rg</string>
+	<string>com.googleusercontent.apps.406099696497-mcs94a53ttg7ru556uec2hejel40ej7u</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>406099696497-17qn06u8a0dc717u8ul7s49ampk13lul.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>io.flutter.plugins.firebase.messaging</string>
+	<string>io.flutter.plugins.firebase.tests</string>
 	<key>PROJECT_ID</key>
 	<string>flutterfire-e2e-tests</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:406099696497:ios:1b423b89c63b82053574d0</string>
+	<string>1:406099696497:ios:acd9c8e17b5e620e3574d0</string>
 	<key>DATABASE_URL</key>
 	<string>https://flutterfire-e2e-tests-default-rtdb.europe-west1.firebasedatabase.app</string>
 </dict>
