--- a/packages/firebase_dynamic_links/firebase_dynamic_links/example/pubspec.yaml
+++ b/packages/firebase_dynamic_links/firebase_dynamic_links/example/pubspec.yaml
@@ -6,25 +6,11 @@ environment:
   flutter: ">=1.12.0"
 
 dependencies:
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_dynamic_links:
-    path: ../
+  firebase_core: any
+  firebase_dynamic_links: any
   flutter:
     sdk: flutter
   url_launcher: ^6.1.0
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_dynamic_links:
-    path: ../
-  firebase_dynamic_links_platform_interface:
-    path: ../../firebase_dynamic_links_platform_interface
 
 flutter:
   uses-material-design: true
