--- a/packages/firebase_performance/firebase_performance/example/pubspec.yaml
+++ b/packages/firebase_performance/firebase_performance/example/pubspec.yaml
@@ -7,29 +7,11 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_performance:
-    path: ../
+  firebase_core: any
+  firebase_performance: any
   flutter:
     sdk: flutter
   http: ^0.13.0
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
-  firebase_performance:
-    path: ../
-  firebase_performance_platform_interface:
-    path: ../../firebase_performance_platform_interface
-  firebase_performance_web:
-    path: ../../firebase_performance_web
 
 dev_dependencies:
   flutter_test:
