--- a/tests/pubspec.yaml
+++ b/tests/pubspec.yaml
@@ -8,182 +8,53 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  cloud_functions:
-    path: ../packages/cloud_functions/cloud_functions
-  cloud_functions_platform_interface:
-    path: ../packages/cloud_functions/cloud_functions_platform_interface
-  cloud_functions_web:
-    path: ../packages/cloud_functions/cloud_functions_web
+  cloud_functions: any
+  cloud_functions_platform_interface: any
+  cloud_functions_web: any
   collection: ^1.15.0
-  firebase_analytics:
-    path: ../packages/firebase_analytics/firebase_analytics
-  firebase_analytics_platform_interface:
-    path: ../packages/firebase_analytics/firebase_analytics_platform_interface
-  firebase_analytics_web:
-    path: ../packages/firebase_analytics/firebase_analytics_web
-  firebase_app_check:
-    path: ../packages/firebase_app_check/firebase_app_check
-  firebase_app_check_platform_interface:
-    path: ../packages/firebase_app_check/firebase_app_check_platform_interface
-  firebase_app_check_web:
-    path: ../packages/firebase_app_check/firebase_app_check_web
-  firebase_app_installations:
-    path: ../packages/firebase_app_installations/firebase_app_installations
-  firebase_app_installations_platform_interface:
-    path: ../packages/firebase_app_installations/firebase_app_installations_platform_interface
-  firebase_app_installations_web:
-    path: ../packages/firebase_app_installations/firebase_app_installations_web
-  firebase_auth:
-    path: ../packages/firebase_auth/firebase_auth
-  firebase_auth_platform_interface:
-    path: ../packages/firebase_auth/firebase_auth_platform_interface
-  firebase_auth_web:
-    path: ../packages/firebase_auth/firebase_auth_web
-  firebase_core:
-    path: ../packages/firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../packages/firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../packages/firebase_core/firebase_core_web
-  firebase_crashlytics:
-    path: ../packages/firebase_crashlytics/firebase_crashlytics
-  firebase_crashlytics_platform_interface:
-    path: ../packages/firebase_crashlytics/firebase_crashlytics_platform_interface
-  firebase_database:
-    path: ../packages/firebase_database/firebase_database
-  firebase_database_platform_interface:
-    path: ../packages/firebase_database/firebase_database_platform_interface
-  firebase_database_web:
-    path: ../packages/firebase_database/firebase_database_web
-  firebase_dynamic_links:
-    path: ../packages/firebase_dynamic_links/firebase_dynamic_links
-  firebase_dynamic_links_platform_interface:
-    path: ../packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface
-  #firebase_in_app_messaging:
-  #  path: ../packages/firebase_in_app_messaging/firebase_in_app_messaging
-  #firebase_in_app_messaging_platform_interface:
-  #  path: ../packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface
-  firebase_messaging:
-    path: ../packages/firebase_messaging/firebase_messaging
-  firebase_messaging_platform_interface:
-    path: ../packages/firebase_messaging/firebase_messaging_platform_interface
-  firebase_messaging_web:
-    path: ../packages/firebase_messaging/firebase_messaging_web
-  firebase_ml_model_downloader:
-    path: ../packages/firebase_ml_model_downloader/firebase_ml_model_downloader
-  firebase_ml_model_downloader_platform_interface:
-    path: ../packages/firebase_ml_model_downloader/firebase_ml_model_downloader_platform_interface
+  firebase_analytics: any
+  firebase_analytics_platform_interface: any
+  firebase_analytics_web: any
+  firebase_app_check: any
+  firebase_app_check_platform_interface: any
+  firebase_app_check_web: any
+  firebase_app_installations: any
+  firebase_app_installations_platform_interface: any
+  firebase_app_installations_web: any
+  firebase_auth: any
+  firebase_auth_platform_interface: any
+  firebase_auth_web: any
+  firebase_core: any
+  firebase_core_platform_interface: any
+  firebase_core_web: any
+  firebase_crashlytics: any
+  firebase_crashlytics_platform_interface: any
+  firebase_database: any
+  firebase_database_platform_interface: any
+  firebase_database_web: any
+  firebase_dynamic_links: any
+  firebase_dynamic_links_platform_interface: any
+  #firebase_in_app_messaging: any
+  #firebase_in_app_messaging_platform_interface: any
+  firebase_messaging: any
+  firebase_messaging_platform_interface: any
+  firebase_messaging_web: any
+  firebase_ml_model_downloader: any
+  firebase_ml_model_downloader_platform_interface: any
 
   # TODO does not run on android without google services json due to com.google.firebase.perf.FirebasePerformanceInitializer.onAppColdStart
-  # firebase_performance:
-  #   path: ../packages/firebase_performance/firebase_performance
-  # firebase_performance_platform_interface:
-  #   path: ../packages/firebase_performance/firebase_performance_platform_interface
-  # firebase_performance_web:
-  #   path: ../packages/firebase_performance/firebase_performance_web
-  firebase_remote_config:
-    path: ../packages/firebase_remote_config/firebase_remote_config
-  firebase_remote_config_platform_interface:
-    path: ../packages/firebase_remote_config/firebase_remote_config_platform_interface
-  firebase_remote_config_web:
-    path: ../packages/firebase_remote_config/firebase_remote_config_web
-  firebase_storage:
-    path: ../packages/firebase_storage/firebase_storage
-  firebase_storage_platform_interface:
-    path: ../packages/firebase_storage/firebase_storage_platform_interface
-  firebase_storage_web:
-    path: ../packages/firebase_storage/firebase_storage_web
+  # firebase_performance: any
+  # firebase_performance_platform_interface: any
+  # firebase_performance_web: any
+  firebase_remote_config: any
+  firebase_remote_config_platform_interface: any
+  firebase_remote_config_web: any
+  firebase_storage: any
+  firebase_storage_platform_interface: any
+  firebase_storage_web: any
   flutter:
     sdk: flutter
   http: ^0.13.4
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../packages/_flutterfire_internals
-  cloud_functions:
-    path: ../packages/cloud_functions/cloud_functions
-  cloud_functions_platform_interface:
-    path: ../packages/cloud_functions/cloud_functions_platform_interface
-  cloud_functions_web:
-    path: ../packages/cloud_functions/cloud_functions_web
-  firebase_analytics:
-    path: ../packages/firebase_analytics/firebase_analytics
-  firebase_analytics_platform_interface:
-    path: ../packages/firebase_analytics/firebase_analytics_platform_interface
-  firebase_analytics_web:
-    path: ../packages/firebase_analytics/firebase_analytics_web
-  firebase_app_check:
-    path: ../packages/firebase_app_check/firebase_app_check
-  firebase_app_check_platform_interface:
-    path: ../packages/firebase_app_check/firebase_app_check_platform_interface
-  firebase_app_check_web:
-    path: ../packages/firebase_app_check/firebase_app_check_web
-  firebase_app_installations:
-    path: ../packages/firebase_app_installations/firebase_app_installations
-  firebase_app_installations_platform_interface:
-    path: ../packages/firebase_app_installations/firebase_app_installations_platform_interface
-  firebase_app_installations_web:
-    path: ../packages/firebase_app_installations/firebase_app_installations_web
-  firebase_auth:
-    path: ../packages/firebase_auth/firebase_auth
-  firebase_auth_platform_interface:
-    path: ../packages/firebase_auth/firebase_auth_platform_interface
-  firebase_auth_web:
-    path: ../packages/firebase_auth/firebase_auth_web
-  firebase_core:
-    path: ../packages/firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../packages/firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../packages/firebase_core/firebase_core_web
-  firebase_crashlytics:
-    path: ../packages/firebase_crashlytics/firebase_crashlytics
-  firebase_crashlytics_platform_interface:
-    path: ../packages/firebase_crashlytics/firebase_crashlytics_platform_interface
-  firebase_database:
-    path: ../packages/firebase_database/firebase_database
-  firebase_database_platform_interface:
-    path: ../packages/firebase_database/firebase_database_platform_interface
-  firebase_database_web:
-    path: ../packages/firebase_database/firebase_database_web
-  firebase_dynamic_links:
-    path: ../packages/firebase_dynamic_links/firebase_dynamic_links
-  firebase_dynamic_links_platform_interface:
-    path: ../packages/firebase_dynamic_links/firebase_dynamic_links_platform_interface
-  #firebase_in_app_messaging:
-  #  path: ../packages/firebase_in_app_messaging/firebase_in_app_messaging
-  #firebase_in_app_messaging_platform_interface:
-  #  path: ../packages/firebase_in_app_messaging/firebase_in_app_messaging_platform_interface
-  firebase_messaging:
-    path: ../packages/firebase_messaging/firebase_messaging
-  firebase_messaging_platform_interface:
-    path: ../packages/firebase_messaging/firebase_messaging_platform_interface
-  firebase_messaging_web:
-    path: ../packages/firebase_messaging/firebase_messaging_web
-  firebase_ml_model_downloader:
-    path: ../packages/firebase_ml_model_downloader/firebase_ml_model_downloader
-  firebase_ml_model_downloader_platform_interface:
-    path: ../packages/firebase_ml_model_downloader/firebase_ml_model_downloader_platform_interface
-
-  # TODO does not run on android without google services json due to com.google.firebase.perf.FirebasePerformanceInitializer.onAppColdStart
-  # firebase_performance:
-  #   path: ../packages/firebase_performance/firebase_performance
-  # firebase_performance_platform_interface:
-  #   path: ../packages/firebase_performance/firebase_performance_platform_interface
-  # firebase_performance_web:
-  #   path: ../packages/firebase_performance/firebase_performance_web
-  firebase_remote_config:
-    path: ../packages/firebase_remote_config/firebase_remote_config
-  firebase_remote_config_platform_interface:
-    path: ../packages/firebase_remote_config/firebase_remote_config_platform_interface
-  firebase_remote_config_web:
-    path: ../packages/firebase_remote_config/firebase_remote_config_web
-  firebase_storage:
-    path: ../packages/firebase_storage/firebase_storage
-  firebase_storage_platform_interface:
-    path: ../packages/firebase_storage/firebase_storage_platform_interface
-  firebase_storage_web:
-    path: ../packages/firebase_storage/firebase_storage_web
 
 dev_dependencies:
   flutter_test:
