--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -74,6 +74,11 @@ jobs:
         with:
           channel: 'stable'
           cache: true
+      - uses: bluefireteam/melos-action@v2
+        with:
+          run-bootstrap: false
+      - name: "Bootstrap package"
+        run: melos bootstrap --scope tests
       - name: "Install Tools"
         run: |
           sudo npm i -g firebase-tools
@@ -148,6 +153,11 @@ jobs:
         with:
           channel: 'stable'
           cache: true
+      - uses: bluefireteam/melos-action@v2
+        with:
+          run-bootstrap: false
+      - name: "Bootstrap package"
+        run: melos bootstrap --scope tests
       - name: "Install Tools"
         run: |
           sudo npm i -g firebase-tools
@@ -215,6 +225,11 @@ jobs:
         with:
           channel: 'stable'
           cache: true
+      - uses: bluefireteam/melos-action@v2
+        with:
+          run-bootstrap: false
+      - name: "Bootstrap package"
+        run: melos bootstrap --scope tests
       - name: "Install Tools"
         run: |
           sudo npm i -g firebase-tools
@@ -256,6 +271,11 @@ jobs:
         with:
           channel: 'stable'
           cache: true
+      - uses: bluefireteam/melos-action@v2
+        with:
+          run-bootstrap: false
+      - name: "Bootstrap package"
+        run: melos bootstrap --scope tests
       - name: "Install Tools"
         run: |
           sudo npm i -g firebase-tools
