--- a/packages/cloud_firestore/cloud_firestore/example/pubspec.yaml
+++ b/packages/cloud_firestore/cloud_firestore/example/pubspec.yaml
@@ -6,27 +6,11 @@ environment:
   flutter: '>=1.12.13+hotfix.4'
 
 dependencies:
-  cloud_firestore:
-    path: ../
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
+  cloud_firestore: any
+  firebase_core: any
   flutter:
     sdk: flutter
   http: ^0.13.3
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  cloud_firestore_platform_interface:
-    path: ../../cloud_firestore_platform_interface
-  cloud_firestore_web:
-    path: ../../cloud_firestore_web
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
 
 dev_dependencies:
   integration_test:
