--- a/packages/cloud_firestore_odm/cloud_firestore_odm/example/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm/example/pubspec.yaml
@@ -6,12 +6,9 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  cloud_firestore:
-    path: ../../../cloud_firestore/cloud_firestore
-  cloud_firestore_odm:
-    path: ../../cloud_firestore_odm
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
+  cloud_firestore: any
+  cloud_firestore_odm:  any
+  firebase_core: any
   flutter:
     sdk: flutter
   freezed_annotation: ^2.0.0
@@ -20,10 +17,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.0
-  cloud_firestore_odm_generator:
-    path: ../../cloud_firestore_odm_generator
-  cloud_firestore_odm_generator_integration_test:
-    path: ../../cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test
+  cloud_firestore_odm_generator: any
+  cloud_firestore_odm_generator_integration_test: any
   flutter_test:
     sdk: flutter
   freezed: ^2.0.0
@@ -32,28 +27,6 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.3.0
   mockito: ^5.0.0
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  cloud_firestore:
-    path: ../../../cloud_firestore/cloud_firestore
-  cloud_firestore_odm:
-    path: ../../cloud_firestore_odm
-  cloud_firestore_odm_generator:
-    path: ../../cloud_firestore_odm_generator
-  cloud_firestore_odm_generator_integration_test:
-    path: ../../cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test
-  cloud_firestore_platform_interface:
-    path: ../../../cloud_firestore/cloud_firestore_platform_interface
-  cloud_firestore_web:
-    path: ../../../cloud_firestore/cloud_firestore_web
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
 
 flutter:
   uses-material-design: true
