--- a/packages/cloud_firestore_odm/cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm_generator/cloud_firestore_odm_generator_integration_test/pubspec.yaml
@@ -7,8 +7,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.3.1
-  cloud_firestore_odm:
-    path: ../../cloud_firestore_odm
+  cloud_firestore_odm: any
   flutter:
     sdk: flutter
   freezed_annotation: ^2.0.0
@@ -17,26 +16,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.0
-  cloud_firestore_odm_generator:
-    path: ../../cloud_firestore_odm_generator
+  cloud_firestore_odm_generator: any
   flutter_test:
     sdk: flutter
   freezed: ^2.0.0
   json_serializable: ">=6.3.0 <7.0.0"
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  cloud_firestore:
-    path: ../../../cloud_firestore/cloud_firestore
-  cloud_firestore_odm:
-    path: ../../cloud_firestore_odm
-  cloud_firestore_odm_generator:
-    path: ../../cloud_firestore_odm_generator
-  cloud_firestore_platform_interface:
-    path: ../../../cloud_firestore/cloud_firestore_platform_interface
-  cloud_firestore_web:
-    path: ../../../cloud_firestore/cloud_firestore_web
 
 flutter:
   uses-material-design: false
