--- a/packages/firebase_analytics/firebase_analytics/example/pubspec.yaml
+++ b/packages/firebase_analytics/firebase_analytics/example/pubspec.yaml
@@ -6,26 +6,10 @@ environment:
   flutter: ">=1.12.13+hotfix.5"
 
 dependencies:
-  firebase_analytics:
-    path: ../
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
+  firebase_analytics: any
+  firebase_core: any
   flutter:
     sdk: flutter
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  firebase_analytics_platform_interface:
-    path: ../../firebase_analytics_platform_interface
-  firebase_analytics_web:
-    path: ../../../firebase_analytics/firebase_analytics_web
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
 
 flutter:
   uses-material-design: true
