--- a/packages/firebase_app_check/firebase_app_check/example/pubspec.yaml
+++ b/packages/firebase_app_check/firebase_app_check/example/pubspec.yaml
@@ -9,34 +9,12 @@ environment:
   sdk: ">=2.16.0 <3.0.0"
 
 dependencies:
-  cloud_firestore:
-    path: ../../../cloud_firestore/cloud_firestore
+  cloud_firestore: any
   cupertino_icons: ^0.1.2
-  firebase_app_check:
-    path: ../
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
+  firebase_app_check: any
+  firebase_core: any
   flutter:
     sdk: flutter
 
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  cloud_firestore:
-    path: ../../../cloud_firestore/cloud_firestore
-  cloud_firestore_platform_interface:
-    path: ../../../cloud_firestore/cloud_firestore_platform_interface
-  cloud_firestore_web:
-    path: ../../../cloud_firestore/cloud_firestore_web
-  firebase_app_check_platform_interface:
-    path: ../../../firebase_app_check/firebase_app_check_platform_interface
-  firebase_app_check_web:
-    path: ../../../firebase_app_check/firebase_app_check_web
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
 flutter:
   uses-material-design: true
