--- a/packages/firebase_core/firebase_core/example/pubspec.yaml
+++ b/packages/firebase_core/firebase_core/example/pubspec.yaml
@@ -5,16 +5,9 @@ environment:
   sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
-  firebase_core:
-    path: ../
+  firebase_core: any
   flutter:
     sdk: flutter
-
-dependency_overrides:
-  firebase_core_platform_interface:
-    path: ../../firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../firebase_core_web
 
 flutter:
   uses-material-design: true
