--- a/packages/firebase_crashlytics/firebase_crashlytics/example/pubspec.yaml
+++ b/packages/firebase_crashlytics/firebase_crashlytics/example/pubspec.yaml
@@ -6,28 +6,11 @@ environment:
   flutter: '>=1.12.13+hotfix.5'
 
 dependencies:
-  firebase_analytics:
-    path: ../../../firebase_analytics/firebase_analytics
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_crashlytics:
-    path: ../
+  firebase_analytics: any
+  firebase_core: any
+  firebase_crashlytics: any
   flutter:
     sdk: flutter
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
-  firebase_crashlytics:
-    path: ../
-  firebase_crashlytics_platform_interface:
-    path: ../../firebase_crashlytics_platform_interface
 
 flutter:
   uses-material-design: true
