--- a/packages/firebase_ml_model_downloader/firebase_ml_model_downloader/example/pubspec.yaml
+++ b/packages/firebase_ml_model_downloader/firebase_ml_model_downloader/example/pubspec.yaml
@@ -18,31 +18,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_ml_model_downloader:
-    # When depending on this package from a real application you should use:
-    #   firebase_ml_model_downloader: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
-    path: ../
+  firebase_ml_model_downloader: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
-  firebase_ml_model_downloader:
-    path: ../
-  firebase_ml_model_downloader_platform_interface:
-    path: ../../firebase_ml_model_downloader_platform_interface
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
