--- a/packages/firebase_storage/firebase_storage/example/pubspec.yaml
+++ b/packages/firebase_storage/firebase_storage/example/pubspec.yaml
@@ -5,30 +5,12 @@ environment:
   sdk: '>=2.16.0 <3.0.0'
 
 dependencies:
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_storage:
-    path: ../
+  firebase_core: any
+  firebase_storage: any
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+4
   image_picker_for_web: ^2.1.4
-
-dependency_overrides:
-  _flutterfire_internals:
-    path: ../../../_flutterfire_internals
-  firebase_core:
-    path: ../../../firebase_core/firebase_core
-  firebase_core_platform_interface:
-    path: ../../../firebase_core/firebase_core_platform_interface
-  firebase_core_web:
-    path: ../../../firebase_core/firebase_core_web
-  firebase_storage:
-    path: ../
-  firebase_storage_platform_interface:
-    path: ../../firebase_storage_platform_interface
-  firebase_storage_web:
-    path: ../../firebase_storage_web
 
 flutter:
   uses-material-design: true
