--- a/packages/firebase_ui_database/example/pubspec.yaml
+++ b/packages/firebase_ui_database/example/pubspec.yaml
@@ -29,8 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_ui_database:
-    path: ../
+  firebase_ui_database: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
