--- a/packages/firebase_ui_firestore/example/pubspec.yaml
+++ b/packages/firebase_ui_firestore/example/pubspec.yaml
@@ -29,8 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_ui_firestore:
-    path: ../
+  firebase_ui_firestore: any
   cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
   firebase_core: ^2.4.1
