refactor: upgrade project to remove warnings from Flutter 3.7 (#10344)
* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

* refactor: remove deprecated lints in Flutter 3.7

--- a/.github/workflows/firebase_firestore.yaml
+++ b/.github/workflows/firebase_firestore.yaml
@@ -71,7 +71,8 @@ jobs:
           java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          # TODO(Lyokone): upgrade to stable when https://github.com/flutter/flutter/issues/118469 is closed
+          flutter-version: '3.3.10'
           cache: true
       - uses: bluefireteam/melos-action@v1
         with:
