--- a/.github/workflows/e2e_tests.yaml
+++ b/.github/workflows/e2e_tests.yaml
@@ -223,7 +223,8 @@ jobs:
           restore-keys: firebase-emulators-v1
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          # TODO(Lyokone): upgrade to stable when https://github.com/flutter/flutter/issues/118469 is closed
+          flutter-version: '3.3.10'
           cache: true
       - uses: bluefireteam/melos-action@v2
         with:
