--- a/packages/firebase_core/firebase_core/pubspec.yaml
+++ b/packages/firebase_core/firebase_core/pubspec.yaml
@@ -1,7 +1,7 @@
 name: firebase_core
 description: Flutter plugin for Firebase Core, enabling connecting to multiple
   Firebase apps.
-homepage: https://firebase.flutter.dev/docs/core/usage/
+homepage: https://firebase.google.com/docs/flutter/setup
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_core/firebase_core
 version: 2.5.0
 
