chore(auth): update the example to offer the choice of using silent verification instead of Recaptcha (#10544)
* chore(auth): update the example to offer the choice of using silent verification instead of Recaptcha

* chore: fix typo

--- a/packages/firebase_auth/firebase_auth/example/pubspec.yaml
+++ b/packages/firebase_auth/firebase_auth/example/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   firebase_auth: ^4.2.9
   firebase_core: ^2.7.0
+  firebase_messaging: ^14.2.5
   flutter:
     sdk: flutter
   flutter_signin_button: ^2.0.0
